- Changed title of SSH libarmfp.dylib alert dialog from "Failure" to "Alert" to make things clearer
- Added better handling for cases where some phone information can't be obtained (doesn't fail outright)
- Added 1.1.3 jailbreak (thanks to Zibri for the method)
- Removed old anySIM-based SIM unlock and put in new gunlock method (thanks to Geohot for this)


v1.3.2 beta - 01/16/08

- Added iTunes 7.6 compatibility


v1.3.1 (Hacker-Pschorr) - 12/15/07

- Added instructions for upgrading from 1.1.1 to 1.1.2
- Made UI look proper on Leopard (all text should have been black)
- Fixed a major bug in setting the correct file permissions for anySIM
- Added more credits for anySIM
- Added serial number to Info tab


v1.3 (Velvet Fog) - 12/14/07

- Added 1.1.2 compatibility
- Added iTunes 7.5 compatibility (no need for for the MobDev tool I created earlier) -- thanks to planetbeing for this
- Removed previous ringtone syncing code (not needed with 1.1.2 or MeCCA patched 1.1.1)
- Added anySIM 1.2 (in addition to 1.1) and baseband version detection so that the correct version of anySIM is installed
- Updated the documentation for firmware 1.1.2 and SIM unlocking
- Added Info tab which contains detailed status information


v1.3 beta 2 (Big Rock) - 11/08/07

- Added MeCCA patch to 1.1.1 jailbreak process to allow for addition of custom ringtones to the System ringtone directory (/Library/Ringtones)
- Removed the ability to add ringtones to the User ringtone directory as it's too buggy (left in the ability to delete them though)
- Since the version of the MobileDevice framework which comes with iTunes 7.5 doesn't allow for jailbreak, I've added the ability to include MobileDevice as a dylib directly in the application bundle.  This makes it so that people can upgrade to iTunes 7.5 (or later) and not have to worry about breaking iNdependence.