@@ -89,7 +89,8 @@
 						<li>Select the <i>Firmware</i> tab and press the <i>Pre Firmware Upgrade</i> button.</li>
 						<li>Enter the IP address of the phone and the root password (see <a href="#ssh">below</a> for the default root password if you didn't change it when you installed SSH).</li>
 						<li>Follow the instructions given in the dialog windows.  If iNdependence gives you a warning about <i>host verification failure</i> and asks to edit your <b>known_hosts</b> file, choose the <i>Yes</i> option (which is now the default).</li>
-						<li>Once you are told to upgrade using iTunes, quit iNdependence, and select the <i>Update</i> button in the iTunes window (not the </i>Restore</i> button).  Note that the button might be labelled <i>Upgrade</i> instead of <i>Update</i>.</li>
+						<li>Once you are told to upgrade using iTunes, quit iNdependence, and hold down the <b>Option</b> key while you press the <i>Update</i> button in the iTunes window (not the </i>Restore</i> button).  Note that the button might be labelled <i>Upgrade</i> instead of <i>Update</i>.</li>
+						<li>Select the firmware file you want to upgrade with using the file chooser presented (1.1.1 or 1.1.2 firmware file).</li>
 						<li>Wait for iTunes to finish.</li>
 						<li>Quit iTunes and relaunch iNdependence.  In the status bar at the bottom of the iNdependence window you should see <i>Firmware 1.1.1</i> or <i>Firmware 1.1.2</i> (depending on which one you upgraded to).</li>
 						<li>Congratulations!  You are now ready to activate/jailbreak your phone using the instructions below.</li>
@@ -109,7 +110,8 @@
 						<li>Select the <i>Firmware</i> tab and press the <i>Pre Firmware Upgrade</i> button.</li>
 						<li>Enter the IP address of the phone and the root password (see <a href="#ssh">below</a> for the default root password if you didn't change it when you installed SSH).</li>
 						<li>Follow the instructions given in the dialog windows.  If iNdependence gives you a warning about <i>host verification failure</i> and asks to edit your <b>known_hosts</b> file, choose the <i>Yes</i> option (which is now the default).</li>
-						<li>Once you are told to upgrade using iTunes, quit iNdependence, and select the <i>Update</i> button in the iTunes window (not the </i>Restore</i> button).  Note that the button might be labelled <i>Upgrade</i> instead of <i>Update</i>.</li>
+						<li>Once you are told to upgrade using iTunes, quit iNdependence, and hold down the <b>Option</b> key while you press the <i>Update</i> button in the iTunes window (not the </i>Restore</i> button).  Note that the button might be labelled <i>Upgrade</i> instead of <i>Update</i>.</li>
+						<li>Select the 1.1.2 firmware file you want to upgrade with using the file chooser presented.</li>
 						<li>Wait for iTunes to finish.</li>
 						<li>Quit iTunes and relaunch iNdependence.  In the status bar at the bottom of the iNdependence window you should see <i>Firmware 1.1.2</i>.</li>
 						<li>Congratulations!  You are now ready to activate/jailbreak your 1.1.2 phone using the instructions below.</li>
